
libdwarf_header_src = [ 'libdwarf.h' ]

libdwarf_src = [
  'dwarf.h',
  'dwarf_abbrev.c',
  'dwarf_abbrev.h',
  'dwarf_alloc.c',
  'dwarf_alloc.h',
  'dwarf_arange.c',
  'dwarf_arange.h',
  'dwarf_base_types.h',
  'dwarf_crc.c',
  'dwarf_crc32.c',
  'dwarf_debuglink.c',
  'dwarf_debuglink.h',
  'dwarf_die_deliv.c',
  'dwarf_die_deliv.h',
  'dwarf_debugnames.c',
  'dwarf_debugnames.h',
  'dwarf_debug_sup.c',
  'dwarf_dsc.c',
  'dwarf_dsc.h',
  'dwarf_elf_access.h',
  'dwarf_elf_defines.h',
  'dwarf_elf_load_headers.c',
  'dwarf_elfread.c',
  'dwarf_elfread.h',
  'dwarf_elf_rel_detector.c',
  'dwarf_elf_rel_detector.h',
  'dwarf_elf_reloc_386.h',
  'dwarf_elf_reloc_aarch64.h',
  'dwarf_elf_reloc_arm.h',
  'dwarf_elf_reloc_mips.h',
  'dwarf_elf_reloc_ppc64.h',
  'dwarf_elf_reloc_ppc.h',
  'dwarf_elf_reloc_sparc.h',
  'dwarf_elf_reloc_x86_64.h',
  'dwarf_elfstructs.h',
  'dwarf_errmsg_list.h',
  'dwarf_error.c',
  'dwarf_error.h',
  'dwarf_find_sigref.c',
  'dwarf_fission_to_cu.c',
  'dwarf_form.c',
  'dwarf_form_class_names.c',
  'dwarf_frame.c',
  'dwarf_frame.h',
  'dwarf_frame2.c',
  'dwarf_funcs.c',
  'dwarf_funcs.h',
  'dwarf_gdbindex.c',
  'dwarf_gdbindex.h',
  'dwarf_generic_init.c',
  'dwarf_global.c',
  'dwarf_global.h',
  'dwarf_gnu_index.h',
  'dwarf_gnu_index.c',
  'dwarf_groups.c',
  'dwarf_harmless.c',
  'dwarf_harmless.h',
  'dwarf_init_finish.c',
  'dwarf_leb.c',
  'dwarf_line.c',
  'dwarf_line.h',
  'dwarf_line_table_reader_common.h',
  'dwarf_loc.c',
  'dwarf_loc.h',
  'dwarf_locationop_read.c',
  'dwarf_loclists.c',
  'dwarf_macho_loader.h',
  'dwarf_machoread.c',
  'dwarf_machoread.h',
  'dwarf_macro.c',
  'dwarf_macro.h',
  'dwarf_macro5.c',
  'dwarf_macro5.h',
  'dwarf_memcpy_swap.h',
  'dwarf_memcpy_swap.c',
  'dwarf_names.c',
  'dwarf_object_detector.c',
  'dwarf_object_detector.h',
  'dwarf_object_read_common.c',
  'dwarf_object_read_common.h',
  'dwarf_opaque.h',
  'dwarf_pe_descr.h',
  'dwarf_peread.c',
  'dwarf_peread.h',
  'dwarf_print_lines.c',
  'dwarf_pubtypes.c',
  'dwarf_query.c',
  'dwarf_safe_strcpy.c',
  'dwarf_safe_strcpy.h',
  'dwarf_ranges.c',
  'dwarf_rnglists.c',
  'dwarf_rnglists.h',
  'dwarf_reading.h',
  'dwarf_reloc_386.h',
  'dwarf_reloc_arm.h',
  'dwarf_reloc_mips.h',
  'dwarf_reloc_ppc.h',
  'dwarf_reloc_ppc64.h',
  'dwarf_reloc_x86_64.h',
  'dwarf_str_offsets.c',
  'dwarf_str_offsets.h',
  'dwarf_string.c',
  'dwarf_string.h',
  'dwarf_stringsection.c',
  'dwarf_tied.c',
  'dwarf_tied_decls.h',
  'dwarf_tsearchhash.c',
  'dwarf_tsearch.h',
  'dwarf_types.c',
  'dwarf_types.h',
  'dwarf_util.c',
  'dwarf_util.h',
  'dwarf_vars.c',
  'dwarf_vars.h',
  'dwarf_weaks.c',
  'dwarf_weaks.h',
  'dwarf_xu_index.c',
  'dwarf_xu_index.h',
  'libdwarf.h',
  'libdwarf_private.h'
]

zlib_dep = dependency('zlib', method: 'pkg-config', required: false)

libdwarf_deps = []
if zlib_dep.found() == true
  libdwarf_deps += zlib_dep
endif

libdwarf_lib = library('libdwarf', libdwarf_src,
  c_args : [ libdwarf_args, '-DLIBDWARF_BUILD' ],
  dependencies : libdwarf_deps,
  include_directories : config_dir,
  install : true,
  version : meson.project_version()
)

libdwarf = declare_dependency(
  include_directories : [ include_directories('.')],
  link_with : libdwarf_lib,
  dependencies : libdwarf_deps
)

install_headers(libdwarf_header_src,
  install_dir : dir_pkginclude + '-' + v_maj
)